# PesquisaMetodologia

./: README.md  docker-compose.yml  run_tests.py
analysis/: analyze.py
analysis/output/: resultados_completos.csv
go/: Dockerfile  go.mod
go/cmd/: main.go
java/: Dockerfile  pom.xml
java/src/main/resources/: application.properties
k6/: bench.js
nodejs/: Dockerfile  package.json
nodejs/src/: server.js
results/: go_depth1_err0_bat1.json  go_depth1_err0_bat2.json  go_depth1_err0_bat3.json  go_depth1_err100_bat1.json  go_depth1_err100_bat2.json  go_depth1_err100_bat3.json  go_depth1_err50_bat1.json  go_depth1_err50_bat2.json  go_depth1_err50_bat3.json  go_depth1_err5_bat1.json  go_depth1_err5_bat2.json  go_depth1_err5_bat3.json  go_depth25_err0_bat1.json  go_depth25_err0_bat2.json  go_depth25_err0_bat3.json  go_depth25_err100_bat1.json  go_depth25_err100_bat2.json  go_depth25_err100_bat3.json  go_depth25_err50_bat1.json  go_depth25_err50_bat2.json  go_depth25_err50_bat3.json  go_depth25_err5_bat1.json  go_depth25_err5_bat2.json  go_depth25_err5_bat3.json  go_depth50_err0_bat1.json  go_depth50_err0_bat2.json  go_depth50_err0_bat3.json  go_depth50_err100_bat1.json  go_depth50_err100_bat2.json  go_depth50_err100_bat3.json  go_depth50_err50_bat1.json  go_depth50_err50_bat2.json  go_depth50_err50_bat3.json  go_depth50_err5_bat1.json  go_depth50_err5_bat2.json  go_depth50_err5_bat3.json  java_depth1_err0_bat1.json  java_depth1_err0_bat2.json  java_depth1_err0_bat3.json  java_depth1_err100_bat1.json  (+104 more)
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
(+4 files in other folders)
