[package]
name    = "error-perf-rust"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix-web  = "4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
rand       = "0.8"

[profile.release]
opt-level = 3
lto       = true
